[package]
name = "mkbook"
version = "0.4.0"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2018"
build = "build.rs"
description = "A simpler alternative to mdbook, meant for building book websites from Markdown files"
homepage = "https://hamaluik.github.io/mkbook/"
repository = "https://github.com/hamaluik/mkbook"
readme = "README.md"
keywords = ["book", "markdown", "static"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
license = "Apache-2.0"
exclude = [
    "docs/*",
    "docs-src/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
syntect = "3.3"
comrak = "0.6"
clap = { version = "2.33", features = ["wrap_help"] }
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lazy_static = "1.4"
chrono = "0.4"
notify = "4.0"
ws = "0.9"
fern = { version = "0.5", features = ["colored"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info", "std", "serde"] }
ignore = "0.4"
reqwest = "0.9"
md5 = "0.7"

[build-dependencies]
sass-rs = "0.2"
